# lum

./: Cargo.toml  LICENSE  README.md  TODO  cliff.toml  flake.nix
.github/workflows/: build_and_test.yml  deploy_prerelease.yml  deploy_release.yml
lum/: Cargo.toml
lum/src/: lib.rs  main.rs
lum/src/event/: event.rs  event_repeater.rs  subscriber.rs
lum/src/service/: discord.rs  service.rs  service_manager.rs
lum_boxtypes/: Cargo.toml
lum_config/: Cargo.toml
lum_config/src/: env_handler.rs  error.rs  file_handler.rs  lib.rs  merger.rs
lum_config/tests/common/: mod.rs
lum_event/: Cargo.toml
lum_event/src/: arc_observable.rs  event.rs  event_repeater.rs  subscriber.rs
lum_event/tests/: event.rs  observables.rs
lum_log/: Cargo.toml
lum_log/src/: builder.rs  default.rs  lib.rs  logger.rs
lum_service/: Cargo.toml
lum_service/src/: service.rs  service_manager.rs  types.rs
lum_service/tests/: service_framework.rs
lum_service/tests/common/: mod.rs
