[package]
name = "template"
version = "0.1.0"
authors = ["<name>"]
edition = "2024"
rust-version = "1.95.0"
description = "<description>"
readme = "README.md"
repository = "<repository>"
license = "MIT"
keywords = ["<keywords>", "<keywords>"]
exclude = [".envrc", ".direnv", ".devcontainer", ".github", ".vscode", "flake.nix", "flake.lock"]

[profile.release]
debug = false
opt-level = 3
lto = true

[profile.dev]
debug = true
opt-level = 0
lto = false

[dependencies]